--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="form-group">
                     <label for="txt-name">Customer Name</label>
-                    <input class="form-control" id="txt-name" placeholder="Eg. Lucky Prabath" type="text">
+                    <input class="form-control" id="txt-name" placeholder="Eg. Poorni Amarathunga" type="text">
                 </div>
                 <div class="form-group">
                     <label for="txt-address">Customer Address</label>
@@ -38,7 +38,7 @@
                 </div>
                 <hr>
                 <div class="form-group">
-                    <button class="btn btn-primary" id="btn-save">Save</button>
+                    <button class="btn btn-primary" id="btn-save" type="button">Save</button>
                     <button class="btn btn-danger" id="btn-clear" type="reset">Clear</button>
                 </div>
             </form>
